# BE_REPO

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.prod.yaml  docker-compose.yml  github-actions.docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug-template.md  feature-template.md
.github/workflows/: deploy.yml  pre-commit.yml
beans/: admin.py  models.py  serializers.py  urls.py
beans/migrations/: 0001_initial.py  0002_initial.py
common/: utils.py  view_counter.py
config/: celery.py  settings.py  urls.py
config/settings/: __init__.py  _base.py  dev.py  prod.py
docker/: dev.Dockerfile  docker-compose.prod.yaml  prod.Dockerfile
nginx/: Dockerfile  nginx.conf
profiles/: models.py  serializers.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_relationship.py
records/: admin.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
records/migrations/: 0001_initial.py  0002_remove_post_like_cnt_remove_tasted_record_like_cnt_and_more.py  0003_rename_likes_post_like_cnt_and_more.py  0004_post_tasted_record.py
records/posts/: serializers.py  urls.py  views.py
records/tasted_record/: serializers.py  urls.py  views.py
repo/: apps.py
repo/admins/: keys.py  utils.py
repo/beans/: admin.py  apps.py  models.py  schemas.py  serializers.py  services.py  tasks.py  urls.py  views.py
repo/common/: admin_filters.py  admin_mixins.py  bucket.py  constants.py  decorators.py  filters.py  permissions.py  serializers.py  utils.py  view_counter.py  view_tracker.py
repo/events/: admin.py  apps.py  enums.py  models.py  schemas.py  serializers.py  services.py  urls.py  views.py
repo/interactions/: admin.py  apps.py  managers.py  (+6 more)
scripts/: deploy.sh  entrypoint.dev.sh  entrypoint.prod.sh
tests/: beans_tests.py  budy_recommend_tests.py  commnets_tests.py  conftest.py  factorys.py  feed_tests.py  like_tests.py  locustfile.py  note_tests.py  profile_tests.py  records_tests.py  relationship_tests.py  top_posts_tests.py
(+196 files in other folders)
