[tool.poetry]
name = "brewbuds"
version = "0.2.0"
description = ""
authors = ["hwstar-1204 <hwstar-1204@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.4"
djangorestframework = "^3.15.2"
django-environ = "^0.11.2"
django-cors-headers = "^4.4.0"
pre-commit = "^3.8.0"
mysqlclient = "^2.2.4"
django-allauth = "^65.0.2"
requests = "^2.32.3"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
dj-rest-auth = "^6.0.0"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
boto3 = "^1.35.36"
django-storages = "^1.14.4"
pillow = "^10.4.0"
pymysql = "^1.1.1"
gunicorn = "^23.0.0"
cryptography = "^43.0.1"
django-filter = "^24.3"
django-seed = "^0.3.1"
psycopg2-binary = "^2.9.10"
factory-boy = "^3.3.1"
django-debug-toolbar = "^4.4.6"
django-redis = "^5.4.0"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
django-celery-results = "^2.5.1"
django-admin-rangefilter = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
black = "^24.10.0"
locust = "^2.32.6"

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F", "B", "I", "N"]
lint.ignore = ["E501", "F403", "F405", "F841"]  # F841: unused variable (제거 필요)


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
